--- a/my/ActivityLifeCycleTest/app/src/main/res/layout/activity_main.xml
+++ b/my/ActivityLifeCycleTest/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Hello World!" />
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+      android:id="@+id/start_normal_button"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="start_normal_button" />
+
+    <Button
+        android:id="@+id/start_dialog_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+    android:text="start_dialog_button" />
+
+  </LinearLayout>
